--- a/article/跨域解决方案.md
+++ b/article/跨域解决方案.md
@@ -18,3 +18,34 @@ http://a.cn:8081
 
 
 
+## 为什么浏览器不支持跨域
+
+`cookie` `LocalStirage` 都不支持跨域
+
+`DOM`元素也有同源策略 iframe
+
+`ajax` 也不支持跨域
+
+
+
+## 实现跨域
+
+1. jsonp
+
+   > 只能发送get 请求，不支持post put delete，并且不安全，XSS攻击
+
+2. cors (服务端设置)
+
+3. postMessage (不同页面通信)
+
+4. document.domin (子域跟父域 通信）
+
+5. window.name
+
+6. location.hash
+
+7. http-proxy
+
+8. nginx
+
+9. websocket
